--- a/ancillary_files/mut_file/1vj6.rc
+++ b/ancillary_files/mut_file/1vj6.rc
@@ -1,4 +1,4 @@
-5,1VJ6_wt,1vj606_wt,0
-6,1VJ6_mut,1vj606_T99M,1.8
-7,1VJ6_mut,1vj606_H71F,1
-8,1VJ6_mut,1vj606_H71FT99M,0.5
+5,1VJ6_mut,1vj606_wt
+6,1VJ6_mut,1vj606_T99M
+7,1VJ6_mut,1vj606_H71F
+8,1VJ6_mut,1vj606_H71FT99M
