--- a/ancillary_files/mut_file/1n7t.rc
+++ b/ancillary_files/mut_file/1n7t.rc
@@ -1,4 +1,4 @@
-13,1N7T_mut,1n7t07_wt
-14,1N7T_mut,1n7t07_T108M
-15,1N7T_mut,1n7t07_H79F
-16,1N7T_mut,1n7t07_H79FT108M
+13,1N7T_wt,1n7t07_wt,0,0
+14,1N7T_mut,1n7t07_T108M,1.8,2.4
+15,1N7T_mut,1n7t07_H79F,0.9,0.9
+16,1N7T_mut,1n7t07_H79FT108M,0.9,1.7
